--- a/gulp/src/scss/modules/_general.scss
+++ b/gulp/src/scss/modules/_general.scss
@@ -21,6 +21,7 @@ h6,
 b,
 section,
 footer,
+.button,
 .relative {
   position: relative;
 }
@@ -38,9 +39,7 @@ h2,
 h3,
 h4 {
   margin: 0px;
-}
-
-h1 {
+  font-weight: 400;
 }
 
 h2 {
@@ -88,8 +87,8 @@ ul.reset,
   }
 }
 
-.p-none{
-    pointer-events: none;
+.p-none {
+  pointer-events: none;
 }
 
 .close {
@@ -155,6 +154,29 @@ ul.reset,
 }
 
 .section-loading {
+  &:after,
+  &:before {
+    @include dombasic;
+    top: 0px;
+    height: 100%;
+    width: 20vw;
+  }
+  &:after {
+    left: 0px;
+    background: linear-gradient(
+      to right,
+      rgba(25, 38, 64, 0.65) 0%,
+      rgba(25, 38, 64, 0) 100%
+    );
+  }
+  &:before {
+    right: 0px;
+    background: linear-gradient(
+      to left,
+      rgba(25, 38, 64, 0.65) 0%,
+      rgba(25, 38, 64, 0) 100%
+    );
+  }
   .photo.load {
     img {
       width: 100%;
@@ -168,7 +190,6 @@ ul.reset,
     overflow: hidden;
   }
   .counter-load {
-
     &.hide {
       display: none;
     }
@@ -191,17 +212,13 @@ ul.reset,
 .section-form {
   transition-delay: 0.5s;
   transition-timing-function: cubic-bezier(1, 0.75, 0.5, 0.25);
-  padding: 180px 0 90px 0;
+  padding: 180px 3rem 90px 3rem;
   top: 0px;
   height: 100%;
   position: fixed;
   overflow: auto;
   .tooltip-source {
-    top: 0px;
-    right: 0px;
-    width: 100%;
-    max-width: calc(100vw - 30px);
-    padding: 22.5px 22.5px 22.5px 15px;
+    bottom: 0px;
     .icon-container {
       width: calc(63px);
       text-align: left;
@@ -214,6 +231,69 @@ ul.reset,
     &.toggleNotActive {
       opacity: 0;
       pointer-events: none;
+    }
+  }
+  .links a {
+    @include transition(all 0.5s ease-in-out);
+    &:hover {
+      opacity: 0.75;
+    }
+  }
+}
+
+/* responsive */
+@media (max-width: 1500px) {
+  .section-loading .counter {
+    right: 30px;
+  }
+}
+
+@media (min-width: 768px) {
+  .section-form .tooltip-source {
+    right: 0px;
+    width: 100%;
+    max-width: calc(100vw - 30px);
+    padding: 22.5px 22.5px 22.5px 15px;
+    position: absolute;
+  }
+}
+
+@media (max-width: 767px) {
+  body {
+    font-size: 14px;
+  }
+  h2 {
+    font-size: 32px;
+    line-height: 33px;
+  }
+  h3 {
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .input-easy {
+    font-size: 12px;
+  }
+  .section-form {
+    padding: 90px 1.5rem 45px 1.5rem;
+    .tooltip-source {
+      right: -1.5rem;
+      width: calc(100% + 3rem);
+      min-height: 100vh;
+      padding: 90px 60px;
+      position: fixed;
+      .right-icos {
+        top: calc(60px - 1.5rem);
+      }
+      .text-container {
+        width: 100%;
+        max-height: calc(100vh - 180px);
+        overflow: auto;
+      }
+      .icon-container {
+        position: absolute;
+        bottom: 30px;
+        right: 40px;
+      }
     }
   }
 }
