--- a/gulp/src/scss/modules/_inputs.scss
+++ b/gulp/src/scss/modules/_inputs.scss
@@ -82,7 +82,7 @@ button:focus {
   border-bottom: 1px solid #d9d9d9;
   text-align: center;
   padding-bottom: 1rem;
-  color: #fff;
+  color: $color-gray1;
   position: relative;
   &:focus {
     outline: none;
@@ -98,21 +98,80 @@ button:focus {
 }
 
 .button {
-  @include transition(all 0.5s ease-in-out);
+  @include transition(all 0.05s ease-in-out);
   padding: 0.25rem 1rem;
   text-align: center;
-  line-height: initial;
   font-size: 21px;
   font-weight: 700;
   letter-spacing: 0.04em;
   cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border:none;
+  span {
+    @include transition(all 0.5s ease-in-out);
+    &:nth-of-type(1),
+    &:nth-of-type(2),
+    &:nth-of-type(3),
+    &:nth-of-type(4) {
+      position: absolute;
+    }
+    &:nth-of-type(1),
+    &:nth-of-type(2) {
+      top: 0%;
+    }
+    &:nth-of-type(3),
+    &:nth-of-type(4) {
+      bottom: 0%;
+    }
+    &:nth-of-type(1),
+    &:nth-of-type(3) {
+      height: 2px;
+      width: 100%;
+    }
+    &:nth-of-type(2),
+    &:nth-of-type(4) {
+      height: 100%;
+      width: 2px;
+    }
+    &:nth-of-type(1),
+    &:nth-of-type(4) {
+      left: 0%;
+    }
+    &:nth-of-type(2),
+    &:nth-of-type(3) {
+      right: 0%;
+    }
+  }
   &.btn-white-blue {
     background-color: $color-gray1;
     color: $color-blue1;
-    border: 2px solid $color-gray1;
+    span {
+      &:nth-of-type(1),
+      &:nth-of-type(2),
+      &:nth-of-type(3),
+      &:nth-of-type(4) {
+        background-color: $color-gray1;
+      }
+    }
     &:hover {
-      background-color: $color-blue1;
-      color: $color-gray1;
+      background-color: transparent;
+      color: #fff;
+      span {
+        &:nth-of-type(1) {
+          top: -5px;
+        }
+        &:nth-of-type(2) {
+          right: -5px;
+        }
+        &:nth-of-type(3) {
+          bottom: -5px;
+        }
+        &:nth-of-type(4) {
+          left: -5px;
+        }
+      }
     }
   }
 }
