--- a/css/sprite.css
+++ b/css/sprite.css
@@ -1,5 +1,5 @@
 .svg-i-close-blue {
-	background: url("svg/sprite.css-6abac8f8.svg") 100% 0 no-repeat;
+	background: url("svg/sprite.css-ff7d2625.svg") 43.90243902439025% 90% no-repeat;
 }
 
 .svg-i-close-blue-dims {
@@ -8,7 +8,7 @@
 }
 
 .svg-i-fb {
-	background: url("svg/sprite.css-6abac8f8.svg") 85.29411764705883% 51.06382978723404% no-repeat;
+	background: url("svg/sprite.css-ff7d2625.svg") 61.855670103092784% 81.81818181818181% no-repeat;
 }
 
 .svg-i-fb-dims {
@@ -17,7 +17,7 @@
 }
 
 .svg-i-holding {
-	background: url("svg/sprite.css-6abac8f8.svg") 0 0 no-repeat;
+	background: url("svg/sprite.css-ff7d2625.svg") 0 0 no-repeat;
 }
 
 .svg-i-holding-dims {
@@ -26,7 +26,7 @@
 }
 
 .svg-i-ig {
-	background: url("svg/sprite.css-6abac8f8.svg") 94.56521739130434% 91.48936170212765% no-repeat;
+	background: url("svg/sprite.css-ff7d2625.svg") 100% 0 no-repeat;
 }
 
 .svg-i-ig-dims {
@@ -35,7 +35,7 @@
 }
 
 .svg-i-mute {
-	background: url("svg/sprite.css-6abac8f8.svg") 66.66666666666667% 0 no-repeat;
+	background: url("svg/sprite.css-ff7d2625.svg") 71.64179104477611% 0 no-repeat;
 }
 
 .svg-i-mute-dims {
@@ -44,7 +44,7 @@
 }
 
 .svg-i-tw {
-	background: url("svg/sprite.css-6abac8f8.svg") 51.61290322580645% 56.86274509803921% no-repeat;
+	background: url("svg/sprite.css-ff7d2625.svg") 98.86363636363636% 32.20338983050848% no-repeat;
 }
 
 .svg-i-tw-dims {
@@ -53,11 +53,11 @@
 }
 
 .svg-i-volume {
-	background: url("svg/sprite.css-6abac8f8.svg") 0 100% no-repeat;
+	background: url("svg/sprite.css-ff7d2625.svg") 0 100% no-repeat;
 }
 
 .svg-i-volume-dims {
-	width: 25px;
-	height: 21px;
+	width: 36px;
+	height: 29px;
 }
 
